--- a/01-android/app/src/main/res/values/strings.xml
+++ b/01-android/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
-
-    <string name="mensaje">Mensaje</string>
+    <string name="app_name">MovilesComputacion2023A</string>
+    <!-- <string name="mensaje">Mensaje</string>-->
+    <string name="bienvenida">Bienvenida</string>
+    <string name="title_activity_aaciclo_vida">AACicloVida</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
@@ -9,4 +11,10 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <string-array name="string_array_opciones_dialogo">
+        <item>Lunes</item>
+        <item>Martes</item>
+        <item>Miercoles</item>
+    </string-array>
 </resources>
