--- a/Deber3RecyclerViewInstagram/app/src/main/res/values/strings.xml
+++ b/Deber3RecyclerViewInstagram/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Deber3-RecyclerView-Instagram</string>
+    <string name="app_name">Instagram</string>
 </resources>
